[tool.poetry]
name = "nonebot_plugin_setu"
version = "1.1.5"
description = "基于lolicon api的涩图插件"
authors = ["ayanamiblhx <1196818079@qq.com>"]
license = "Apache License 2.0"
homepage = "https://github.com/ayanamiblhx/nonebot_plugin_setu"
documentation = "https://github.com/ayanamiblhx/nonebot_plugin_setu/blob/main/README.md"
readme="README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
httpx-socks = "^0.7.3"
nonebot2 = "^2.0.0b2"
nonebot-adapter-onebot = "^2.0.0b1"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
